# book-catalog

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  docker-compose.yml
backend/: .env  .env.example  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 218b57772409_add_books_table.py  2931698c8051_initial.py  4243f6b45827_enrich_books_with_google_volume_metadata.py  bed28f23772a_create_users_table.py  ccb619663b02_add_restrict_fk_on_user_books_book_id.py  f7e09b7f0dd8_add_user_books_table.py
backend/app/: config.py  dependencies.py  main.py  models.py
backend/app/routers/: auth.py  books.py  catalog.py  profile.py
backend/app/schemas/: auth.py  book.py  catalog.py  profile.py
backend/app/services/: google_auth.py  google_books.py  jwt.py
backend/src/colophon/: app.py  dependencies.py  google_books_client.py  google_id_token_verifier.py  jwt_token_service.py  library_service.py  logging_config.py  models.py  problem_details.py  user_repository.py
backend/tests/: conftest.py  test_auth.py  test_books.py  test_catalog_books.py  test_catalog_shelves.py  test_google_auth.py  test_google_books.py  test_jwt.py  test_profile.py
backend/tests/integration/: test_auth_routes.py  test_books_routes.py  test_health.py  test_library_routes.py  test_library_service.py  test_user_book_persistence.py  test_user_persistence.py  test_user_repository.py
backend/tests/unit/: test_dependencies.py  test_google_books_client.py  test_google_id_token_verifier.py  test_jwt_token_service.py
(+95 files in other folders)
