[project]
name = "colophon"
version = "0.1.0"
description = "Colophon backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pyjwt[crypto]>=2.9",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colophon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
