[project]
name = "colophon"
version = "0.1.0"
description = "Colophon backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "pyjwt[crypto]>=2.9",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.0",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colophon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
